--- a/crates/pxp-formatter/Cargo.toml
+++ b/crates/pxp-formatter/Cargo.toml
@@ -6,3 +6,4 @@ license-file.workspace = true
 rust-version.workspace = true
 
 [dependencies]
+pxp-bytestring = { version = "0.1.0", path = "../pxp-bytestring" }
